  lines, as with the "gnuplot" command
- Improve internals of pprintf() -- handle big string args
  properly
- readfile() function: check for valid UTF-8 and recode if
  possible if the text is not UTF-8
- Fix a few small GUI memory leaks
- Linux and Windows: add check for multiple instances of
  gretl, and choice to open a double-clicked file in the
  prior gretl instance, if any
- Fix bug: "catch" not working properly when applied to
  genr expressions within loops
- Fix bug: bad behavior when taking the transpose of a
  scalar variable in a loop
- Fix bug: daily dates in old format YYYY/MM/DD not handled
  correctly in the context of time-series plots
- Fix bug: incomplete error-detection when parsing calls to
  diff() and log() on model-specification command line
- Stata .dta importer: read Stata 12 data files

2013-03-15 version 1.9.12
- Officially increase the maximum length of variable names
  to 31 characters
- "foreign" command: add support for Python + NumPy
- "markers" command: add support for the panel-data case
  where the number of markers equals the number of cross-
  sectional units
- "delete" command: add option to delete all variables of a
  specified type
- "qlrtest" command: compute asymptotic p-value as per Bruce
  Hansen's method (1997)
- "modeltab" command: add --output option to direct the model
  table to a specified file
- $xlist accessor: make available for system estimators
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one
- Enable more streamlined syntax for setting and accessing
  objects within bundles, as in bundle.member
- Add new string function strstrip()
- Add new data-manipulation function aggregate()
- Add new function quadtable(), for Gauss quadrature
- Add new function remove(), for file deletion
- lags() function: add an optional third parameter to control
  the ordering of terms in the output list
- mread() and mwrite() functions: add an optional argument to