@@ -15,6 +15,8 @@ version 1.9.13, in progress
 - Linux and Windows: add check for multiple instances of
   gretl, and choice to open a double-clicked file in the
   prior gretl instance, if any
+- Fix bug: encoding problem when printing from model window
+  on Windows
 - Fix bug: "catch" not working properly when applied to
   genr expressions within loops
 - Fix bug: bad behavior when taking the transpose of a
